--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Rahul Surve Portfolio<br />
 						</h1>
-						<p> Seeking Full Time Opportunities in the field of Data / Business Analytics or Data Science starting May 2023 <br/>
+						<p> Seeking Full Time Opportunities in the field of Data Analytics | Business Analytics | Data Science starting May 2023 <br/>
 							Former Data Analytics Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
 							M.S in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
