--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1>Rahul Surve Portfolio<br />
 						</h1>
-						<p> Seeking Full Time Opportunities in the field of Data Analytics | Business Analytics | Data Science starting May 2023 <br/>
+						<p> <br/>
+							Statistical Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Analytics Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
 							M.S in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
@@ -39,7 +40,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li class="active"><a href="index.html"><!--Projects --></a></li>
 							<!--<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
@@ -76,11 +77,12 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 1. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
-										2. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
-										3. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
-										4. Head of Marketing - IEEE (Student Branch) (June 2019 to May 2020) <br/>
-										5. Summer Intern - ATS Solutions (June 2019 to July 2019)
+									<p> 	1. Statistical Analyst - RWJBarnabas Health (June 2023 - Present) <br/>
+										2. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
+										3. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
+										4. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
+										5. Head of Marketing - IEEE (Student Branch) (June 2019 to May 2020) <br/>
+										6. Summer Intern - ATS Solutions (June 2019 to July 2019)
 									 </p>
 									
 								
@@ -234,7 +236,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>rsurve@stevens.edu | rahulmsurve16@gmail.com</a></p>
+								<p>rahulmsurve16@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
