--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p> <br/>
 							Statistical Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Analytics Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
-							M.S in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
+							M.S. in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
 						</p>
 						<ul class="actions">
