--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									but starved for insights"<br />
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/About Me.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/About Me 2.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://www.linkedin.com/in/rsurve/" class="button large">LinkedIn</a></li>
 								</ul>
