--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Rahul Surve Portfolio<br />
 						</h1>
 						<p> <br/>
-							Statistical Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
+							Data Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Analytics Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
 							M.S. in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
@@ -77,7 +77,7 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 	1. Statistical Analyst - RWJBarnabas Health (June 2023 - Present) <br/>
+									<p> 	1. Data Analyst - RWJBarnabas Health (June 2023 - Present) <br/>
 										2. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
 										3. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
 										4. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
