--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 	1. Data Analyst - RWJBarnabas Health (June 2023 - Present) <br/>
-										2. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
-										3. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
-										4. Data Analyst - Data Strategix (July 2019 to June 2021) <br/>
-										5. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
-										6. Head of Marketing - IEEE (Student Branch) (June 2019 to May 2020) <br/>
+									<p> 	1. Data Analyst - Virtue Care (May 2024 - Present)
+										2. Data Analyst - RWJBarnabas Health (June 2023 - May 2024) <br/>
+										3. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
+										4. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
+										5. Data Analyst - Data Strategix (July 2019 to June 2021) <br/>
+										6. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
 										7. Summer Intern - ATS Solutions (June 2019 to July 2019)
 									 </p>
 									
