--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 	1. Data Analyst - Virtue Care (May 2024 - Present)
+									<p> 	1. Data Analyst - <a href="https://virtuecares.com/contact.php"> Virtue Care (May 2024 - Present) </a> <br/>
 										2. Data Analyst - RWJBarnabas Health (June 2023 - May 2024) <br/>
 										3. Data Analyst Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
 										4. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
