--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<h1>Rahul Surve Portfolio<br />
 						</h1>
 						<p> <br/>
-							Data Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
+							Data Analyst <a href= "https://virtuecares.com/">@Virtue Care </a> <br/>
+							Former Data Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Engineer Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
 							M.S. in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
@@ -77,10 +78,10 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 	1. Data Analyst - <a href="https://virtuecares.com/contact.php"> Virtue Care </a> (May 2024 - Present)  <br/>
-										2. Data Analyst - RWJBarnabas Health (June 2023 - May 2024) <br/>
-										3. Data Engineer Intern - Johnson & Johnson (May 2022 to August 2022) <br/>
-										4. Teaching Assistant - Stevens Institute of Technology (August 2021 to December 2022) <br/>
+									<p> 	1. Data Analyst - <a href="https://virtuecares.com/"> Virtue Care </a> (May 2024 - Present)  <br/>
+										2. Data Analyst - <a href="https://www.rwjbh.org/"> RWJBarnabas Health </a> (June 2023 - May 2024) <br/>
+										3. Data Engineer Intern - <a href="https://www.jnj.com/"> Johnson & Johnson </a> (May 2022 to August 2022) <br/>
+										4. Teaching Assistant - <a href="https://www.stevens.edu/"> Stevens Institute of Technology </a> (August 2021 to December 2022) <br/>
 										5. Data Analyst - Data Strategix (July 2019 to June 2021) <br/>
 										6. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
 										7. Summer Intern - ATS Solutions (June 2019 to July 2019)
