--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<h1>Rahul Surve Portfolio<br />
 						</h1>
 						<p> <br/>
-							Data Analyst <a href= "https://virtuecares.com/">@Virtue Care </a> <br/>
+							Senior Data Analyst <a href= "https://www.novonordisk-us.com//">@Novo Nordisk </a> <br/>
+							Former Data Analyst <a href= "https://virtuecares.com/">@Virtue Care </a> <br/>
 							Former Data Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Engineer Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
 							M.S. in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
@@ -78,13 +79,14 @@
 								</header>	
 									<h1><a href="https://www.linkedin.com/in/rsurve/">Work Experience<br />
 									</a></h1>
-									<p> 	1. Data Analyst - <a href="https://virtuecares.com/"> Virtue Care </a> (May 2024 - Present)  <br/>
-										2. Data Analyst - <a href="https://www.rwjbh.org/"> RWJBarnabas Health </a> (June 2023 - May 2024) <br/>
-										3. Data Engineer Intern - <a href="https://www.jnj.com/"> Johnson & Johnson </a> (May 2022 to August 2022) <br/>
-										4. Teaching Assistant - <a href="https://www.stevens.edu/"> Stevens Institute of Technology </a> (August 2021 to December 2022) <br/>
-										5. Data Analyst - Data Strategix (July 2019 to June 2021) <br/>
-										6. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
-										7. Summer Intern - ATS Solutions (June 2019 to July 2019)
+									<p> 	1. Senior Data Analyst - <a href= "https://www.novonordisk-us.com//"> Novo Nordisk </a> (November 2025 - Present) <br/>
+										2. Data Analyst - <a href="https://virtuecares.com/"> Virtue Care </a> (May 2024 - November 2024)  <br/>
+										3. Data Analyst - <a href="https://www.rwjbh.org/"> RWJBarnabas Health </a> (June 2023 - May 2024) <br/>
+										4. Data Engineer Intern - <a href="https://www.jnj.com/"> Johnson & Johnson </a> (May 2022 to August 2022) <br/>
+										5. Teaching Assistant - <a href="https://www.stevens.edu/"> Stevens Institute of Technology </a> (August 2021 to December 2022) <br/>
+										6. Data Analyst - Data Strategix (July 2019 to June 2021) <br/>
+										7. Python Intern - Trivia Softwares (April 2020 to June 2020) <br/>
+										8. Summer Intern - ATS Solutions (June 2019 to July 2019)
 									 </p>
 									
 								
