--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							Former Data Analyst <a href= "https://virtuecares.com/">@Virtue Care </a> <br/>
 							Former Data Analyst <a href="https://www.rwjbh.org/">@RWJBarnabas Health</a> <br/>
 							Former Data Engineer Intern <a href="https://www.jnj.com/">@Johnson & Johnson</a> <br/>
+							Previously At: <a href="https://www.jnj.com/"> Johnson & Johnson </a>, <a href="https://www.rwjbh.org/">RWJBarnabas Health</a>, <a href= "https://virtuecares.com/">@Virtue Care </a> <br/>
 							M.S. in Business Intelligence and Analytics <a href="https://www.stevens.edu/">@Stevens Institute of Technology</a> <br />
 						<!-- You can learn more about me <a href="https://www.linkedin.com/in/rsurve/">here</a>. -->
 						</p>
